@@ -65,7 +65,7 @@ public class PpktPhenotypicfeatureItalian implements PpktPhenotypicFeatureGenera
         String penultimate = items.stream()
                 .limit(items.size() - 1)
                 .collect(Collectors.joining(", "));
-        String ultimate = items.get(items.size() - 1);
+        String ultimate = items.getLast();
         return penultimate + getConnector(ultimate) + ultimate;
     }
 
